Correct the filter on mobile

--- a/public/frontv1/css/main.css
+++ b/public/frontv1/css/main.css
@@ -3395,6 +3395,12 @@ p.post-category .section-subtitle {
   .header .navmenu {
     order: 3;
   }
+
+  .school-filter-wrapper {
+    position: sticky;
+    top: 8.6vh;
+    z-index: 10;
+  }
 }
 
 .school-row-wrapper {
